--- a/132260/styles.css
+++ b/132260/styles.css
@@ -1,16 +1,16 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
+    font-family:'Outfit', sans-serif;
 }
 
-.container {
-    background-color: rgb(27, 29, 46);
+.container{
+    background-color: rgb(27,29,46);
     height: 100vh;
 }
 
-.envelope {
+.envelope{
     position: relative;
     width: 300px;
     height: 200px;
@@ -20,13 +20,13 @@
     background-color: rgb(90, 240, 182);
 }
 
-.cover {
+.cover{
     position: absolute;
     height: 0px;
     width: 0px;
 }
 
-.cover.top {
+.cover.top{
     border-left: 150px solid transparent;
     border-right: 150px solid transparent;
     border-bottom: 100px solid transparent;
@@ -34,16 +34,16 @@
     transform-origin: top;
 }
 
-.cover.bottom.right {
+.cover.bottom.right{
     border-left: 150px solid transparent;
-    border-right: 150px solid rgb(90, 209, 151);
-    border-bottom: 100px solid rgb(90, 209, 151);
+    border-right: 150px solid rgb(90,209,151);
+    border-bottom: 100px solid rgb(90,209,151);
     border-top: 100px solid transparent;
     border-radius: 0px 0px 10px 10px;
     z-index: 5;
 }
 
-.cover.left {
+.cover.left{
     border-left: 150px solid rgb(90, 225, 167);
     border-right: 150px solid transparent;
     border-bottom: 100px solid transparent;
@@ -52,41 +52,44 @@
     z-index: 5;
 }
 
-.putIn {
+.putIn{
     transition: transform 0.7s ease;
-}
-
-.pullOut {
     transform: translateY(0);
-    transition: transform 0.7s ease 0.5s;
 }
 
-.letter {
+.pullOut{
+    transition: transform 0.7s ease 0.5s;
+    transform: translateY(-200px); 
+}
+
+.letter{
     background-color: rgb(252, 228, 94);
     width: 95%;
     height: 100%;
-    margin: 0 auto;
+    margin:0 auto;
     padding: 10px;
     text-align: center;
-    display: flex;
-    align-items: center;
-    border-radius: 10px;
     font-size: 25px;
-    font-weight: bold;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s;
 }
 
 .envelope:hover .letter{
     transform: translateY(-200px);
 }
 
-.open {
+.open{
     transform: rotateX(180deg);
     transition: transform 0.4s ease;
     z-index: 0;
 }
 
-.close {
-    transform: rotateX(0deg);
-    z-index: 1;
-    transition: transform 0.4s ease 0.7s, z-index 0.1s ease 0.6s;
+.close{
+    transform:rotateX(0deg);
+    z-index:1;
+    transition: transform 0.4s ease 0.7s,z-index 0.1s ease 0.6s;
 }
+
