--- a/182260/dynamic.css
+++ b/182260/dynamic.css
@@ -1,1 +1,24 @@
-/* write your code here ... */
+html{
+    font-family: 'Merienda';
+}
+
+body {
+    background-color: var(--color--body-background);
+    color: var(--color--body-foreground);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+h1 {
+    font-size: 4.8rem;
+}
+
+.heart {
+    color: transparent;
+}
+
+.heart:hover {
+    color: var(--color--heart-foreground--hover);
+}
