--- a/182546/styles.css
+++ b/182546/styles.css
@@ -32,31 +32,40 @@ figure img {
 }
 
 /* implement your code here... */
-
 figure {
-  position: relative;  
+  position: relative;
+  width: 300px;
+  overflow: hidden; 
+  border-radius: 16px;  
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 figcaption {
   position: absolute;
-  bottom: 0;  
+  bottom: 0;
+  left: 0; 
   width: 100%;
-  height: 100%;    
+  height: 100%;
   
-  border-radius: 16px;
-  background-image: linear-gradient(#360033, #0b8793);
+  border-radius: 16px;  
+  background: linear-gradient(to bottom right, #360033, #0b8793);
   
+  font-size: 40px;
   color: #fff;
-  font-size: 40px;  
-
-  display: flex;
-  align-items: center; 
-  justify-content: center;
   
-  opacity: 0;
-  transition: opacity 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;   
+  
+  transform: translateY(100%);
+  transition: transform 0.3s;  
 }
 
 figure:hover figcaption {
-  opacity: 1;  
+  transform: translateY(0);
 }
